--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,3 +12,7 @@ body {
 	color: white;
     background-color: $bs-dark;
 }
+
+* {
+    transition: 0.1s;
+}
